--- a/index.html
+++ b/index.html
@@ -77,12 +77,12 @@
 
     // Your web app's Firebase configuration
     const firebaseConfig = {
-      apiKey: "AIzaSyD0YT3u-r7R53h2rtPO0FYMM1rrv9Xbl4M",
-      authDomain: "ordem-ficha.firebaseapp.com",
-      projectId: "ordem-ficha",
-      storageBucket: "ordem-ficha.appspot.com",
-      messagingSenderId: "543944476352",
-      appId: "1:543944476352:web:56edc79e7af373b5354f25"
+      apiKey: "AIzaSyDwEPUCWmynGZ2bcnDJogLx4s7C3hNCIqo",
+      authDomain: "fichas-b5e57.firebaseapp.com",
+      projectId: "fichas-b5e57",
+      storageBucket: "fichas-b5e57.appspot.com",
+      messagingSenderId: "56001911642",
+      appId: "1:56001911642:web:50158b02c009f0b85fb163"
     };
 
     // Initialize Firebase
